# openage-masterserver

./: .gitignore  README.md  Setup.hs  copying.md  openage-masterserver.cabal  stack.yaml
app/: Main.hs
etc/openage/: masterserver.cfg  masterserver.yaml
src/: Args.hs  BiMap.hs  Config.hs  DBSchema.hs  Database.hs  Main.hs  Protocol.hs  Server.hs  Util.hs  Version.hs
src/Masterserver/: Args.hs  Config.hs  Database.hs  ELO.hs  Protocol.hs  Server.hs
src/main/: Main.hs
src/test/: TestCli.hs
test/: TestCli.hs
