-- openage masterserver cabal config

name:                openage-masterserver
version:             0.1.0.0
synopsis:            master server for openage
description:
  Lobby and matchmaking server for openage.

  Imparts public servers to game clients, keeps track of game statistics,
  creates signed match results and achievements, performs player rankings.
homepage:            http://openage.sft.mx
license:             AGPL-3
license-file:        legal/AGPLv3
author:              Jonas Jelten
maintainer:          jj@sft.mx
copyright:           2015, openage team
category:            Network, Game
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable openage-masterserver
  ghc-options:         -O2 -Wall -dynamic -threaded -fno-warn-missing-signatures -fwarn-tabs
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:
    base >=4.7,
    network,
    containers,
    parsec,
    HDBC,
    HDBC-postgresql

source-repository head
  type: git
  location: https://github.com/SFTtech/openage-masterserver.git
